[package]
name = "apm"
version = "0.4.4"
edition = "2024"

[[bin]]
name = "apm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
